/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    implementation ('org.json:json:20231013')
    testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
    // Gradle 9 no longer adds the launcher automatically
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

group = 'com.romanpulov'
version = '2.1.6'
description = 'violetnotecore'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
